[package]
name = "rust-play-ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
encoding_rs = "0.8.31"
kanaria = "0.1.0"
chrono = "0.4"
chrono-tz = "0.6"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
